<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/karbo"
            android:editable="true"
            android:focusable="true"
            android:enabled="true"
            android:lines="1"
            android:numeric="integer"
            android:hint="@string/calc_carbo_hint"
            android:layout_weight="1"
            android:focusableInTouchMode="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/blodsugar"
            android:editable="true"
            android:enabled="true"
            android:focusable="true"
            android:hint="@string/calc_bloodsugar_hint"
            android:layout_weight="1"
            android:focusableInTouchMode="true" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_text"
        android:id="@+id/calcButton"
        android:onClick="onCalculate"
        android:enabled="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/calc_insulin_label"
            android:id="@+id/insulinLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:ems="6"
            android:id="@+id/insulin"
            android:padding="@dimen/text_margin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_adjust_auto"
            android:onClick="onAdjustAuto" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/calc_adjust_plus"
            android:onClick="onAdjustPlus" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/calc_adjust_minus"
            android:onClick="onAdjustMinus" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc_button_save"
            android:id="@+id/saveButton"
            android:onClick="onSave" />

    </LinearLayout>

</LinearLayout>
