<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_ik"
        android:inputType="numberDecimal"
        android:key="@string/pref_key_ik"
        android:singleLine="true"
        android:numeric="decimal"
        android:defaultValue="15.0"/>

    <EditTextPreference
        android:title="@string/pref_is"
        android:inputType="numberDecimal"
        android:key="@string/pref_key_is"
        android:singleLine="true"
        android:numeric="decimal"
        android:defaultValue="3.6"/>

    <EditTextPreference
        android:title="@string/pref_target"
        android:inputType="numberDecimal"
        android:key="@string/pref_key_target"
        android:singleLine="true"
        android:numeric="decimal"
        android:defaultValue="6.0"/>

</PreferenceScreen>
